--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ db.name=online_quiz_system
 spring.datasource.username=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/online_quiz_system
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
@@ -30,5 +30,5 @@ spring.flyway.baseline-on-migrate=false
 spring.flyway.enabled=false
 
 # JWT
-server.port=7070
+server.port=8080
 
